# product_service

./: .env  Dockerfile  pyproject.toml
product_service/: main.py  setting.py
