[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["laraib nawaz <laraibnawaz943@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
psycopg2 = "^2.9.9"
binary = "^1.0.0"
sqlmodel = "^0.0.22"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
